WIP Trying to fix game 2v2 branch